<resources>
    <string name="app_name">Chat_Machine</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_name">Group Name</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_image">Add Image</string>
    <string name="error_empty_title">Title can\'t be empty</string>
    <string name="error_empty_description">Description can\'t empty</string>
    <string name="error_something_wrong">Something went wrong</string>
    <string name="description_post_image">Post Image</string>
    <string name="description_comment_icon">Comment Icon</string>
    <string name="description_like_icon">Like Icon</string>
    <string name="trending">Trending</string>
    <string name="latest">Latest</string>
    <string name="new_post">New Post</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="error_comment_empty">Comment can\'t be empty</string>
</resources>
