<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <include layout="@layout/layout_loader" />

    <EditText
        android:id="@+id/dialog_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/dialog_post_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_post_title"
        android:background="@android:color/transparent"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minLines="5" />

    <ImageView
        android:id="@+id/dialog_post_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@id/dialog_post_add_image"
        android:contentDescription="@string/add_image"
        android:visibility="gone" />

    <Button
        android:id="@+id/dialog_post_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add_image" />

    <include layout="@layout/layout_cancel_create" />
</RelativeLayout>