<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_large"
    android:layout_marginTop="@dimen/spacing_xmedium"
    android:layout_marginEnd="@dimen/spacing_large"
    android:layout_marginBottom="@dimen/spacing_xmedium"
    android:descendantFocusability="blocksDescendants"
    android:visibility="visible"
    app:cardCornerRadius="2dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/post_author_avatar"
                android:layout_width="@dimen/spacing_xxlarge"
                android:layout_height="@dimen/spacing_xxlarge"
                android:foreground="@color/overlay_light_20"
                android:src="@drawable/profile_image" />

            <View
                android:layout_width="@dimen/spacing_large"
                android:layout_height="0dp" />


            <TextView
                android:id="@+id/post_author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_90"
                tools:text="A1H1" />
        </LinearLayout>

        <TextView
            android:id="@+id/post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:lineSpacingExtra="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_90"
            tools:text="Test Title" />

        <TextView
            android:id="@+id/post_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_large"
            android:lineSpacingExtra="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_60"
            tools:text="Test Description" />

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/description_post_image"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large">

            <LinearLayout
                android:id="@+id/post_like_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/post_like_icon"
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="@dimen/spacing_mlarge"
                    android:layout_marginEnd="@dimen/spacing_middle"
                    android:contentDescription="@string/description_like_icon"
                    android:tint="@color/grey_600"
                    app:srcCompat="@drawable/ic_thumb_up" />

                <TextView
                    android:id="@+id/post_likes_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/spacing_large"
                android:layout_height="0dp" />

            <LinearLayout
                android:id="@+id/post_comments_click"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="@dimen/spacing_mlarge"
                    android:layout_marginEnd="@dimen/spacing_middle"
                    android:contentDescription="@string/description_comment_icon"
                    android:tint="@color/light_blue_400"
                    app:srcCompat="@drawable/ic_textsms" />

                <TextView
                    android:id="@+id/post_comments_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <TextView
                android:id="@+id/post_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end|end"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_40"
                tools:text="10:45 PM" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
